<resources>
    <string name="app_name">WellGelLondon</string>
    <string name="facebook_app_id">359857114902761</string>
    <string name="fb_login_protocol_scheme">fb359857114902761</string>
    <string name="loginAs">Login As</string>
    <string name="customer">Customer</string>
    <string name="service_provider">Service provider</string>
    <string name="loginTocon">Login to Continue</string>
    <string name="enterEmail">Enter your email</string>
    <string name="enterPass">Password</string>
    <string name="forgotPass">Forgot Password?</string>
    <string name="loginBy">or login by</string>
    <string name="login">Login</string>
    <string name="create_account">Create an account</string>
    <string name="choose_subscription">Choose your Subscription!</string>
    <string name="enterSalon">Enter your Salon name</string>
    <string name="entername">Enter your  name</string>
    <string name="next">Next</string>
    <string name="backLogin">Back to Login</string>
    <string name="enterNumber">Phone Number</string>
    <string name="enterCountry">Country</string>
    <string name="enterAddress">Address</string>
    <string name="addProfile">Add your profile Picture/Logo</string>
    <string name="twoMore">Two more step</string>
    <string name="oneMore">One more step</string>
    <string name="submit">Submit</string>
    <string name="inalidEmail">Please enter valid email</string>
    <string name="inalidPassWord">Please enter valid pasword</string>
    <string name="cancel">Cancel</string>
    <string name="setting">Settings</string>
    <string name="gpsSetting">GPS\'s settings</string>
    <string name="gpsDetail">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="take_photo">Take Photo</string>
    <string name="addPhoto">Add Photo</string>
    <string name="choose_from">Choose from gallery</string>
    <string name="invalidName">Please enter a name</string>
    <string name="invalidPass">Password must be more than 5 char</string>
    <string name="invalidNumber">Please valid number</string>
    <string name="invalidField">Please fill this field</string>
    <string name="invalidProfile">Please select your avtar</string>
    <string name="welcome">Welcome!</string>
    <string name="wellgelExpres">Wellgellondon express gel</string>
    <string name="adservice">Add Service </string>
    <string name="selectSerive">Please select service/s which provide by you</string>
    <string name="addnewAddres">Add a new Address</string>
    <string name="chromeKIt">Chrome Kits</string>
    <string name="addresName">Address</string>
    <string name="street">Street Address</string>
    <string name="city">City</string>
    <string name="county">County</string>
    <string name="zip">Zip code</string>
    <string name="close">close</string>
    <string name="invalidDate">Invalid Date</string>
    <string name="productName">Product Name :</string>
    <string name="productQan">Quantity : </string>
    <string name="productAddres">Delivery Address :</string>
    <string name="checkOut">Check Out</string>
    <string name="placeOrder">Proceed to pay</string>
    <string name="updateCar">Update Cart</string>
    <string name="Thnku">Thank you! \nYour order is pending\nMake payment for place your order</string>
    <string name="confimBookigText">Thank you! \n\nMake payment for Booking Confirmation</string>
    <string name="invalidCardDetail">Invalid card detail</string>
    <string name="view">Check invoice</string>
    <string name="view_detail"><u>View</u></string>
    <string name="hideInv">Hide invoice</string>
    <string name="work">Work</string>
    <string name="home">Home</string>
    <string name="other">Other</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saveDetails">Choose Salon</string>
    <string name="getYourAddress">Fetching your address......</string>
    <string name="deleteAdd">Deleting your address.....</string>
    <string name="creatngAddresss">Creating your address....</string>
    <string name="updateaddress">Updating your address....</string>
    <string name="cartFetch">Fetching your cart....</string>
    <string name="checkUser">Checking user...</string>
    <string name="checkOrder">Checking your orders....</string>
    <string name="selectStart">Open Time</string>
    <string name="selectEnd"> Close  Time</string>
    <string name="london">London</string>
    <string name="choose_location">Choose Location</string>
    <string name="default_notification_channel_id">channel-1</string>
    <string name="chngetime"><![CDATA[Change Time & Date]]></string>
    <string name="currency">£</string>
    <string name="price">£ \u0020Price</string>
    <string name="cofirmBooking">Confirm Booking</string>
    <string name="updateDateTime"><![CDATA[Update Booking Date & Time]]></string>
    <string name="continues">Continue</string>
    <string name="about_us">WellgelLondon is an all in one cruelty free gel nail system. There is no need for separate base or top coats, everything you need is in one bottle. This makes application faster and easy to manage stock levels. Wellgel is made from an alcohol and solvent free system making it suitable for expectant mothers. Wellgel uses keratin to bond and nourish the natural nail, without causing damage or irritation to the skin. We have put a great deal of thought into this faster, safer, cruelty free system to make your working environment and the care of your nails at the forefront of our research. </string>
    <string name="requestAccept">Booking Request is now accepted.</string>
    <string name="salonServiceDetail">You will provide service to customer as below details.</string>
    <string name="customerServiceDetail">You will get service by salon as below details.</string>
    <string name="salonGetRespon">Customer will shortly respond to the Payment Method it will follow.</string>
    <string name="salonImage">Add Your Salon Images (Optional)</string>
    <string name="postSomthing">Post Something Intersting....</string>
    <string name="write_a_comment">Write a comment</string>

</resources>
