<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/black"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="Add Address"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/homeBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/capsule_edittxt_shape_grey"
                    android:gravity="center"
                    android:text="@string/home"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/workBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/capsule_edittxt_shape"
                    android:gravity="center"
                    android:text="@string/work"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/otherBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/capsule_edittxt_shape"


                    android:gravity="center"
                    android:text="@string/other"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

            </LinearLayout>

            <EditText
                android:id="@+id/c_address_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:hint="@string/addresName"
                android:paddingBottom="@dimen/_20sdp"
                android:singleLine="true"
                android:textSize="@dimen/_14sdp"
                android:visibility="gone" />


            <EditText
                android:id="@+id/c_street_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/street"
                android:paddingBottom="@dimen/_20sdp"
                android:singleLine="true"
                android:textSize="@dimen/_14sdp" />


            <EditText
                android:id="@+id/c_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/city"
                android:paddingBottom="@dimen/_20sdp"
                android:singleLine="true"
                android:textSize="@dimen/_14sdp" />


            <EditText
                android:id="@+id/c_county"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/county"
                android:paddingBottom="@dimen/_20sdp"
                android:singleLine="true"
                android:textSize="@dimen/_14sdp" />

            <EditText
                android:id="@+id/c_zip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/zip"
                android:inputType="number"
                android:paddingBottom="@dimen/_20sdp"
                android:singleLine="true"
                android:textSize="@dimen/_14sdp" />


            <EditText
                android:id="@+id/c_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/enterCountry"
                android:paddingBottom="@dimen/_20sdp"
                android:singleLine="true"
                android:textSize="@dimen/_14sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/c_close"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/capsule_button_shape_bla"
                    android:text="@string/close"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <Button

                    android:id="@+id/c_add_new_address"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/capsule_button_shape"
                    android:text="Create"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>