<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/tool_background"
    android:fillViewport="true"
    tools:context=".Customer.Activities.C_LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/logo" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/round_right_left_corner"
            android:elevation="@dimen/_10sdp"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingRight="@dimen/_20sdp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/av_ltstd_roman"
                android:gravity="center"
                android:text="@string/create_account"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/av_ltstd_roman"
                android:gravity="center"
                android:text="As Customer"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="normal" />


            <LinearLayout
                android:id="@+id/first_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <EditText
                    android:id="@+id/c_registr_Salname_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/entername"
                    android:paddingBottom="@dimen/_20sdp"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/c_registr_email_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/enterEmail"
                    android:paddingBottom="@dimen/_20sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_14sdp" />


                <EditText
                    android:id="@+id/c_registr_pass_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/enterPass"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/_20sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/second_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/c_registr_numer_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/enterNumber"
                    android:inputType="number"
                    android:paddingBottom="@dimen/_20sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_14sdp" />

                <EditText
                    android:id="@+id/c_registr_country_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/enterCountry"
                    android:paddingBottom="@dimen/_20sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_14sdp" />


                <EditText
                    android:id="@+id/c_registr_address_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:drawableRight="@drawable/ic_gps_fixed_black_24dp"
                    android:hint="@string/enterAddress"
                    android:inputType="text"
                    android:paddingBottom="@dimen/_20sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/third_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:orientation="vertical"
                android:visibility="gone">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileImage"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_gravity="center"
                    android:src="@mipmap/profile" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/addProfile" />

            </LinearLayout>


            <Button
                android:id="@+id/c_registr_next_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:background="@drawable/ripple_effect_capsule"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/c_registr_back_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/ripple_effect_capsule"
                android:backgroundTint="@color/black"                android:text="@string/backLogin"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>


</ScrollView>