<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/tool_background">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_right_left_corner"
            android:elevation="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Update Profile"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/below"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/top"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_250sdp">


                    <ImageView
                        android:id="@+id/user_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/off_grey"
                        android:scaleType="fitXY" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@color/off_grey"
                        android:src="@drawable/ic_photo_camera_black_24dp" />

                </RelativeLayout>


                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:hint="@string/entername"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="normal" />


                <EditText
                    android:id="@+id/user_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:hint="@string/enterNumber"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="normal" />


                <EditText
                    android:id="@+id/user_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:hint="@string/enterAddress"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="normal" />


                <EditText
                    android:id="@+id/user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:hint="@string/enterEmail"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="normal"
                    android:visibility="gone" />


                <EditText
                    android:id="@+id/user_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:hint="@string/county"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="normal" />


                <Button
                    android:id="@+id/update_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/capsule_button_shape"
                    android:gravity="center"
                    android:text="Udpate"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ripple_effect_capsule"
                    android:gravity="center"
                    android:visibility="invisible"
                    android:text="Udpate"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
